--- a/params.yaml
+++ b/params.yaml
@@ -1,10 +1,24 @@
 preprocess:
-  mean: [0.485, 0.456, 0.406]
-  std: [0.229, 0.224, 0.225]
-  resize: [ 224, 224 ]
+  mean:
+    - 0.485
+    - 0.456
+    - 0.406
+  std:
+    - 0.229
+    - 0.224
+    - 0.225
+  resize:
+    - 224
+    - 224
 vgg19:
-  content_layers_ids: [ 21 ]
-  style_layers_ids: [ 0, 5, 10, 19, 28 ]
+  content_layers_ids:
+    - 21
+  style_layers_ids:
+    - 0
+    - 5
+    - 10
+    - 19
+    - 28
 train:
   loss:
     alpha: 1.
