--- a/params.yaml
+++ b/params.yaml
@@ -25,5 +25,6 @@ train:
     beta: 1000.
     normalize_gram_matrix: True
   iterations: 10
+  init_generated: "random"
 plots:
   title: "Neural style transfer results"
