--- a/params.yaml
+++ b/params.yaml
@@ -25,6 +25,6 @@ train:
     beta: 1000.
     normalize_gram_matrix: True
   iterations: 10
-  init_generated: "random"
+  init_generated: "content"
 plots:
   title: "Neural style transfer results"
