--- a/params.yaml
+++ b/params.yaml
@@ -23,8 +23,8 @@ train:
   loss:
     alpha: 1.
     beta: 1000.
-    normalize_gram_matrix: True
-  iterations: 10
-  init_generated: "content"
+    normalize_gram_matrix: true
+  iterations: 20
+  init_generated: random
 plots:
-  title: "Neural style transfer results"
+  title: Random initialization, 20 iterations
