--- a/params.yaml
+++ b/params.yaml
@@ -24,7 +24,7 @@ train:
     alpha: 1.
     beta: 1000.
     normalize_gram_matrix: true
-  iterations: 10
+  iterations: 400
   init_generated: content
 plots:
-  title: LBFGS
+  title: Adam
